--- a/src/locales/hu-HU.json
+++ b/src/locales/hu-HU.json
@@ -1,5 +1,5 @@
 {
-  "title": "Cim",
+  "title": "A város lakossága évek szerint",
   "loading": "Betöltés",
   "loaded": "Adatok készen",
   "population": "Lakosság száma"
