--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,5 +1,5 @@
 {
-  "title": "Title",
+  "title": "City population by time",
   "loading": "Loading",
   "loaded": "Loaded",
   "population": "Population"
