--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -2,5 +2,6 @@
   "title": "Gradsko stanovništvo prema vremenu",
   "loading": "Utovar",
   "loaded": "Natovaren",
-  "population": "Populacija"
+  "population": "Populacija",
+  "projected": "Projektovan"
 }
