--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -3,5 +3,6 @@
   "loading": "Utovar",
   "loaded": "Natovaren",
   "population": "Populacija",
-  "projected": "Projektovan"
+  "projected": "Projektovan",
+  "selectCity": "Izaberite grad"
 }
