--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -4,5 +4,7 @@
   "loaded": "Loaded",
   "population": "Population",
   "projected": "Projected",
-  "selectCity": "Select city"
+  "selectCity": "Select city",
+  "subtitle": "Compare cities",
+  "compareTitle": "Compare {{city1}} and {{city2}} population"
 }
